--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
   <br /><a href="mailto:christian.jules.llagas@adamson.edu.ph">Send email to the Author</a> <br>
   <a href = "Humus.html">Link to Page 2</a> <br>
   <a href = "https://www.w3schools.com/html/">click to visit the Home page</a> <br>
-  <a href = "C:\Users\202213346\Documents\Html_Llagas\word.docx">File to word</a> <br>
-  <a href = "C:\Users\202213346\Documents\Html_Llagas\earth.png">File to Image</a> <br>
-  <a href = "C:\Users\202213346\Documents\Html_Llagas\boop.txt">File to Text</a> <br>
-  <a href = "C:\Users\202213346\Documents\Html_Llagas\word.pdf">File to Pdf</a> <br>
+  <a href = "word.docx">File to word</a> <br>
+  <a href = "earth.png">File to Image</a> <br>
+  <a href = "boop.txt">File to Text</a> <br>
+  <a href = "word.pdf">File to Pdf</a> <br>
   <a href = "#Topfrag">Top</a> <br>
   
   <ul><mark>Ingredients:</mark>
